--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "authlib>=1.6.7",
+    "fastapi>=0.128.4",
+    "python-jose[cryptography]>=3.5.0",
     "redis>=7.1.0",
     "sqlalchemy>=2.0.46",
     "starlette>=0.52.1",
