Adiciona arquivo .env-example com configurações de OAuth, banco de dados, Redis e segurança; atualiza compose.yml para incluir serviço PostgreSQL

--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,19 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    # Equivalente a DB_URL
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: eleitorai
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
       
 volumes:
   redis_data:
