--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "eleitorai"
+name = "VotAI"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -7,8 +7,12 @@ requires-python = ">=3.12"
 dependencies = [
     "authlib>=1.6.7",
     "fastapi>=0.128.4",
+    "httpx>=0.28.1",
+    "itsdangerous>=2.2.0",
+    "pydantic-settings>=2.12.0",
     "python-jose[cryptography]>=3.5.0",
     "redis>=7.1.0",
     "sqlalchemy>=2.0.46",
     "starlette>=0.52.1",
+    "uvicorn[standard]>=0.20.0",
 ]
